--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,3 +4,5 @@ psycopg2-binary==2.9.10
 python-dotenv==1.0.1
 sqlparse==0.5.3
 typing_extensions==4.12.2
+djangorestframework==3.15.2
+djangorestframework-simplejwt==5.5.0
