--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,3 +6,7 @@ sqlparse==0.5.3
 typing_extensions==4.12.2
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.5.0
+django-cors-headers==4.3.1
+PyJWT==2.8.0
+pytz==2024.1
+whitenoise==6.6.0
